# GraphingLib

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Figure.py  File_manager.py  Fits.py  Graphing.py  Graphing_unittest.py  LICENSE  Legend_artists.py  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  documentation.md  feature_request.md  unit_tests.md
.github/workflows/: ci.yml
GraphingLib/: Figure.py  File_manager.py  Fits.py  Graph_elements.py  __init__.py  figure.py  file_manager.py
GraphingLib/Default_styles/: plain.yml
GraphingLib/Unit_testing/: Figure_test.py  File_manager_test.py  Fits_test.py  Graphing_test.py
Unit_testing/: Figure_test.py  File_manager_test.py  Fits_test.py  Graphing_test.py  fits_test.py  graphing_test.py
defaults/: plain.yml  weird.yml
docs/: api.rst  conf.py  contributing.rst  getting_started.rst  graphinglib.rst  index.rst  installation.rst  modules.rst  requirements.txt  testing_graph_lib.rst
docs/_static/: custom.css  graphinglib.css  switcher.json
docs/builddir/: genindex.html  graphinglib.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  testing_graph_lib.html
examples/: 2D_plotting.ipynb  arrow_styles.py  basic_plotting.ipynb  contour_from_data.py  contour_from_function.py  curve_and_scatter.ipynb  curve_arithmetic.py  curve_calculus.py  curve_error_bars.py  curve_error_curves.py  curve_fill_between.py  curve_fitting.ipynb  curve_from_data.py  curve_from_function.py  curve_intersections.py  curve_slices.py  dark_style.py  fit_from_polynomial.py  fit_residuals.py  fourier_series.py  heatmap_custom_mesh.py  heatmap_from_data.py  heatmap_from_function.py  heatmap_from_image.py  heatmap_rotation.py  histogram.py  histogram_pdf.py  hlines_vlines.py  infinite_square_well.py  lorenz_attractor.py  mandelbrot_set.py  matplotlib_plottables.py  multifigure.ipynb  projections.py  scatter.py  scatter_errorbars.py  shape_unions.py  smart_figure_layout.py  stream_from_data.py  stream_from_function.py  (+2 more)
graphinglib/: __init__.py  _version.py  cli.py  data_plotting_1d.py  data_plotting_2d.py  exceptions.py  figure.py  file_manager.py  fits.py  graph_elements.py  inherit.py  legend_artists.py  multifigure.py  shapes.py  smart_figure.py  tools.py
unit_testing/: cli_test.py  data_plotting_1d_test.py  data_plotting_2d_test.py  exceptions_test.py  figure_test.py  file_manager_test.py  fits_test.py  graph_elements_test.py  inherit_test.py  legend_artists_test.py  multifigure_test.py  shapes_test.py  smart_figure_test.py  tools_test.py
(+139 files in other folders)
