[tool.poetry]
name = "graphinglib"
version = "1.2.2"
description = "An object oriented wrapper combining the functionalities of Matplotlib and Scipy"
license = "MIT"
authors = [
    "Gustave Coulombe <magikgus@gmail.com>",
    "Yannick Lapointe <yannicklapointe77@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
PyYAML = "^6.0"
platformdirs = "^3.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.23.0"
sphinx-favicon = "^1.0.1"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
pydata-sphinx-theme = "^0.14.1"

[tool.poetry.scripts]
graphinglib = "graphinglib.cli:main_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
